tests/invalid/round_wrong_arg_count/main.py
x: int = round(1.0, 2)
